--- a/docs/main.tex
+++ b/docs/main.tex
@@ -15,6 +15,8 @@
 
 \usepackage{minted}
 \usepackage{tabularx}
+\usepackage{pgfplots}
+\pgfplotsset{compat=1.18}
 
 %-------------------------------------------------------------
 % Wybór wydziału:
