--- a/docs/main.tex
+++ b/docs/main.tex
@@ -298,4 +298,23 @@ W tabeli przedstawiono 25 repozytoriów wykorzystanych w eksperymentach H1.
 25 & \url{https://github.com/mmumshad/simple-webapp-flask} \\
 \end{tabular}
 
+\appendix{Zbiór repozytoriów testowych do H2--H5}
+\label{att:h2-h5-dataset}
+
+\textbf{H2-H4:} kontrolowane repozytoria PoC o rosnącej złożoności:
+
+\begin{tabular}{r l}
+1 & \url{https://github.com/run-rasztabiga-me/poc1-fastapi} \\
+2 & \url{https://github.com/run-rasztabiga-me/poc2-fastapi} \\
+3 & \url{https://github.com/run-rasztabiga-me/poc3-fastapi} \\
+4 & \url{https://github.com/run-rasztabiga-me/poc4-fastapi} \\
+5 & \url{https://github.com/run-rasztabiga-me/poc5} \\
+\end{tabular}
+
+\textbf{H5:} repozytorium z prompt injection:
+
+\begin{tabular}{r l}
+1 & \url{https://github.com/run-rasztabiga-me/poc-jailbreak1} \\
+\end{tabular}
+
 \end{document} % Dobranoc.
