WIP h3 and slides

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -265,10 +265,10 @@ BEFORE submitting your final JSON output, verify:
 
 \end{minted}
 
-\appendix{Zbiór repozytoriów testowych do H1}
+\appendix{Zbiór repozytoriów testowych do H1 i H3}
 \label{att:h1-dataset}
 
-W tabeli przedstawiono 25 repozytoriów wykorzystanych w eksperymentach H1.
+W tabeli przedstawiono 25 repozytoriów wykorzystanych w eksperymentach H1 i H3.
 
 \begin{tabular}{r l}
 1 & \url{https://github.com/sankeer28/Math-PDF-Generator-Web.git} \\
@@ -298,10 +298,10 @@ W tabeli przedstawiono 25 repozytoriów wykorzystanych w eksperymentach H1.
 25 & \url{https://github.com/mmumshad/simple-webapp-flask} \\
 \end{tabular}
 
-\appendix{Zbiór repozytoriów testowych do H2--H5}
+\appendix{Zbiór repozytoriów testowych do H2, H4 i H5}
 \label{att:h2-h5-dataset}
 
-\textbf{H2-H4:} kontrolowane repozytoria PoC o rosnącej złożoności:
+\textbf{H2 i H4:} kontrolowane repozytoria PoC o rosnącej złożoności:
 
 \begin{tabular}{r l}
 1 & \url{https://github.com/run-rasztabiga-me/poc1-fastapi} \\
